--- a/src/index.html
+++ b/src/index.html
@@ -65,11 +65,13 @@
       <p class="popup__caption"></p>
     </div>
   </div>
-  <div class="popup popup_is-animated popup_type_delete-card">
+  <div class="popup popup_is-animated popup_type_remove-card">
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Вы уверены?</h3>
-      <button type="submit" class="button popup__button">Да</button>
+      <form class="popup__form" novalidate name="remove-card">
+        <button type="submit" class="button popup__button">Да</button>
+      </form>
     </div>
   </div>
   <div class="popup popup_is-animated popup_type_edit-avatar">
